// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should external @swc/helpers when externalHelpers is true 1`] = `
"import * as __WEBPACK_EXTERNAL_MODULE__swc_helpers_class_call_check__ from "@swc/helpers/_/_class_call_check";
import * as __WEBPACK_EXTERNAL_MODULE__swc_helpers_create_class__ from "@swc/helpers/_/_create_class";
var src_FOO = /*#__PURE__*/ function() {
    "use strict";
    function FOO() {
        (0, __WEBPACK_EXTERNAL_MODULE__swc_helpers_class_call_check__._)(this, FOO);
    }
    return (0, __WEBPACK_EXTERNAL_MODULE__swc_helpers_create_class__._)(FOO, [
        {
            key: "bar",
            get: function() {}
        }
    ]), FOO;
}();
export { src_FOO as default };
"
`;

exports[`should external @swc/helpers when externalHelpers is true 2`] = `
"import * as __WEBPACK_EXTERNAL_MODULE__swc_helpers_class_call_check__ from "@swc/helpers/_/_class_call_check";
import * as __WEBPACK_EXTERNAL_MODULE__swc_helpers_create_class__ from "@swc/helpers/_/_create_class";
var src_FOO = /*#__PURE__*/ function() {
    "use strict";
    function FOO() {
        (0, __WEBPACK_EXTERNAL_MODULE__swc_helpers_class_call_check__._)(this, FOO);
    }
    return (0, __WEBPACK_EXTERNAL_MODULE__swc_helpers_create_class__._)(FOO, [
        {
            key: "bar",
            get: function() {}
        }
    ]), FOO;
}();
export { src_FOO as default };
"
`;

exports[`should not external @swc/helpers by default 1`] = `
"function _defineProperties(target, props) {
    for(var i = 0; i < props.length; i++){
        var descriptor = props[i];
        descriptor.enumerable = descriptor.enumerable || !1, descriptor.configurable = !0, "value" in descriptor && (descriptor.writable = !0), Object.defineProperty(target, descriptor.key, descriptor);
    }
}
var src_FOO = /*#__PURE__*/ function() {
    "use strict";
    var Constructor, protoProps, staticProps;
    function FOO() {
        !function(instance, Constructor) {
            if (!(instance instanceof Constructor)) throw TypeError("Cannot call a class as a function");
        }(this, FOO);
    }
    return Constructor = FOO, protoProps = [
        {
            key: "bar",
            get: function() {}
        }
    ], _defineProperties(Constructor.prototype, protoProps), FOO;
}();
export { src_FOO as default };
"
`;

exports[`should respect user override externalHelpers config 1`] = `
"function _defineProperties(target, props) {
    for(var i = 0; i < props.length; i++){
        var descriptor = props[i];
        descriptor.enumerable = descriptor.enumerable || !1, descriptor.configurable = !0, "value" in descriptor && (descriptor.writable = !0), Object.defineProperty(target, descriptor.key, descriptor);
    }
}
var src_FOO = /*#__PURE__*/ function() {
    "use strict";
    var Constructor, protoProps, staticProps;
    function FOO() {
        !function(instance, Constructor) {
            if (!(instance instanceof Constructor)) throw TypeError("Cannot call a class as a function");
        }(this, FOO);
    }
    return Constructor = FOO, protoProps = [
        {
            key: "bar",
            get: function() {}
        }
    ], _defineProperties(Constructor.prototype, protoProps), FOO;
}();
export { src_FOO as default };
"
`;

exports[`should respect user override externalHelpers config 2`] = `
"import * as __WEBPACK_EXTERNAL_MODULE__swc_helpers_class_call_check__ from "@swc/helpers/_/_class_call_check";
import * as __WEBPACK_EXTERNAL_MODULE__swc_helpers_create_class__ from "@swc/helpers/_/_create_class";
var src_FOO = /*#__PURE__*/ function() {
    "use strict";
    function FOO() {
        (0, __WEBPACK_EXTERNAL_MODULE__swc_helpers_class_call_check__._)(this, FOO);
    }
    return (0, __WEBPACK_EXTERNAL_MODULE__swc_helpers_create_class__._)(FOO, [
        {
            key: "bar",
            get: function() {}
        }
    ]), FOO;
}();
export { src_FOO as default };
"
`;
